--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.javashitang</groupId>
-    <artifactId>im-gateway</artifactId>
+    <artifactId>simple-im-gateway</artifactId>
     <version>1.0</version>
 
     <parent>
